# SmartCrack

./: .env.example  .gitignore  HOW-TO.md  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-03-31-phase-a-visual-impact.md  2026-03-31-phase-b-ai-differentiation.md  2026-03-31-phase-c-polish-and-ship.md  2026-03-31-phase-d-completeness.md
src/hashcrack/: __init__.py  __main__.py  adaptive_profiler.py  batch.py  cli.py  config.py  cracker.py  hash_id.py  hashers.py  models.py  orchestrator.py  profiler.py  protocols.py  report.py  session.py
src/hashcrack/osint/: __init__.py  profile_builder.py  username_enum.py
src/hashcrack/plugins/: __init__.py  base.py  discovery.py  rule_parser.py
src/hashcrack/tui/: app.py
src/hashcrack/tui/widgets/: __init__.py  ai_reasoning.py  hash_info.py  result.py
src/smartcrack/: __init__.py  __main__.py  adaptive_profiler.py  analysis.py  batch.py  cli.py  combo.py  config.py  cracker.py  estimator.py  expanded_combo.py  hash_id.py  hashcat_compat.py  hashers.py  hibp.py  knowledge_expander.py  mask.py  models.py  orchestrator.py  password_patterns.py  profiler.py  protocols.py  providers.py  rainbow.py  report.py  result_card.py  rules.py  session.py  telemetry.py  wordlist.py
src/smartcrack/osint/: __init__.py  profile_builder.py
src/smartcrack/plugins/: __init__.py  base.py  discovery.py
src/smartcrack/tui/: __init__.py  app.py
src/smartcrack/tui/widgets/: __init__.py  hash_info.py  log.py  phases.py  progress.py  result.py  telemetry.py
tests/: conftest.py  test_adaptive_profiler.py  test_analysis.py  test_batch.py  test_cli_session.py  test_combo.py  test_cracker.py  test_doctor.py  test_estimator.py  test_expanded_combo.py  test_export.py  test_hash_id.py  test_hashcat_compat.py  test_hashers.py  test_hibp.py  test_knowledge_expander.py  test_mask.py  test_models.py  test_new_hash_types.py  test_orchestrator.py  test_osint.py  test_plugins.py  test_profiler.py  test_rainbow.py  test_report.py  test_result_card.py  test_rule_parser.py  test_rules.py  test_session.py  test_session_resume.py  test_telemetry.py  test_timeout.py  test_tui.py  test_wordlist.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: architecture.tsx  demo.tsx  features.tsx  footer.tsx  hero.tsx  icons.tsx  nav.tsx  scene-3d.tsx  terminal.tsx  theme-toggle.tsx
