[project]
name = "hashcrack"
version = "3.0.0"
description = "AI-powered hash cracking platform with adaptive profiling, OSINT automation, and security audit reports"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0,<15.0",
    "textual>=0.47,<1.0",
    "httpx>=0.25,<1.0",
    "bcrypt>=4.0,<5.0",
    "argon2-cffi>=23.0,<24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "ruff>=0.3",
    "isort>=5.0",
    "mypy>=1.8",
]

[project.scripts]
hashcrack = "hashcrack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hashcrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
