[project]
name = "smartcrack"
version = "2.0.0"
description = "AI-powered hash cracking platform with adaptive profiling, OSINT automation, and security audit reports"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["hash", "cracking", "security", "audit", "password", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0,<15.0",
    "textual>=0.47,<1.0",
    "httpx>=0.25,<1.0",
    "bcrypt>=4.0,<5.0",
    "argon2-cffi>=23.0,<24.0",
    "passlib>=1.7,<2.0",
    "pycryptodome>=3.20,<4.0",
]

[project.urls]
Homepage = "https://github.com/thesamgodson/SmartCrack"
Repository = "https://github.com/thesamgodson/SmartCrack"
Documentation = "https://github.com/thesamgodson/SmartCrack#readme"
"Bug Tracker" = "https://github.com/thesamgodson/SmartCrack/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "ruff>=0.3",
    "isort>=5.0",
    "mypy>=1.8",
]

[project.scripts]
smartcrack = "smartcrack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smartcrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
